--- a/Makefile-cli
+++ b/Makefile-cli
@@ -25,7 +25,7 @@ HEADERS_PATHS             := ./src/bfi
 PRECOMPILED_HEADERS_PATHS :=
 
 # you can add as many include paths as you want
-INCLUDE_PATHS := 
+INCLUDE_PATHS := ./arg-parser
 
 # only works with one path
 DLL_PATH := 
