--- a/Makefile-cli
+++ b/Makefile-cli
@@ -20,8 +20,8 @@ DONE  := \
 # files and folders names
 BUILD_PATH                := ./build
 BINARY_NAME               := bfi.exe
-SOURCES_PATHS             := ./src/bfi
-HEADERS_PATHS             := ./src/bfi
+SOURCES_PATHS             := ./src/cli
+HEADERS_PATHS             := ./src/cli
 PRECOMPILED_HEADERS_PATHS :=
 
 # you can add as many include paths as you want
