--- a/Makefile-gui
+++ b/Makefile-gui
@@ -20,9 +20,9 @@ DONE  := \
 # files and folders names
 BUILD_PATH                := ./build
 BINARY_NAME               := mozkomord.exe
-SOURCES_PATHS             := ./src/mozkomord
-HEADERS_PATHS             := ./src/mozkomord
-PRECOMPILED_HEADERS_PATHS := ./src/mozkomord/prec
+SOURCES_PATHS             := ./src/gui
+HEADERS_PATHS             := ./src/gui
+PRECOMPILED_HEADERS_PATHS := ./src/gui/prec
 
 # you can add as many include paths as you want
 INCLUDE_PATHS := ./wxW_3-0-5/lib_dev/gcc810_x64_dll/mswu
