Add BF memory implementation
- defines all methods declared in BF memory header
- fix overwriting header folders in makefile

--- a/Makefile-cli
+++ b/Makefile-cli
@@ -22,7 +22,7 @@ BUILD_PATH                := ./build
 BINARY_NAME               := bfi.exe
 SOURCES_PATHS             := ./src/cli
 HEADERS_PATHS             := ./src/cli
-HEADERS_PATHS             := ./src/cli/BF
+HEADERS_PATHS             += ./src/cli/BF
 PRECOMPILED_HEADERS_PATHS :=
 
 # you can add as many include paths as you want
