--- a/Makefile-cli
+++ b/Makefile-cli
@@ -22,8 +22,10 @@ BUILD_PATH                := ./build
 BINARY_NAME               := bfi.exe
 SOURCES_PATHS             := ./src/cli
 SOURCES_PATHS             += ./src/cli/BF
+SOURCES_PATHS             += ./src/cli/platform
 HEADERS_PATHS             := ./src/cli
 HEADERS_PATHS             += ./src/cli/BF
+HEADERS_PATHS             += ./src/cli/platform
 HEADERS_PATHS             += ./src/common
 PRECOMPILED_HEADERS_PATHS :=
 
