Add explicit c++17 standard to cli makefile
misc:
- windows platform dependant code now relies on `_WIN32` being defined

--- a/Makefile-cli
+++ b/Makefile-cli
@@ -4,7 +4,7 @@
 # Config =======================================================================
 # Compilation settings ---------------------------------------------------------
 CXX      := g++
-CXXFLAGS := 
+CXXFLAGS := -std=c++17
 LDFLAGS  := 
 LDLIBS   :=
 debug: CXXFLAGS += -g -DDEBUG
