Fix bugs in BF language class, memory factory
- memory type selection should now work as intended

misc:
- add more debug logging
- language class now gets all command line arguments
- help of BF language class shows program name based on argv[0] instead
  of it being hard coded
- add better error messages to memory classes
- add warning flags to cli makefile

--- a/Makefile-cli
+++ b/Makefile-cli
@@ -4,7 +4,7 @@
 # Config =======================================================================
 # Compilation settings ---------------------------------------------------------
 CXX      := g++
-CXXFLAGS := -std=c++17
+CXXFLAGS := -std=c++17 -Wall -Wextra
 LDFLAGS  := 
 LDLIBS   :=
 debug: CXXFLAGS += -g -DDEBUG
