Change default compiler to Clang/LLVM
- reason for this change is the fact that it is native to Windows
- programs built by Clang (unlike the ones made by MinGW-w64) does not
  need a special dll with standard library
  - this results in a better portability of the built program

--- a/Makefile-cli
+++ b/Makefile-cli
@@ -3,8 +3,10 @@
 
 # Config =======================================================================
 # Compilation settings ---------------------------------------------------------
-CXX      := g++
+CXX      := clang++
 CXXFLAGS := -std=c++17 -Wall -Wextra -Wswitch-enum
+# supress warnings about <codecvt> header being deprecated
+CXXFLAGS += -D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING
 LDFLAGS  := 
 LDLIBS   :=
 debug: CXXFLAGS += -g -DDEBUG
