Move parts of BF interpreter to utils
- Program loader, preprocessor and optimizer parts were moved out of the
  BF implementation and into the utils folder to be used by other parts

--- a/Makefile-cli
+++ b/Makefile-cli
@@ -25,9 +25,11 @@ BINARY_NAME               := bfi.exe
 SOURCES_PATHS             := ./src/cli
 SOURCES_PATHS             += ./src/cli/BF
 SOURCES_PATHS             += ./src/cli/platform
+SOURCES_PATHS             += ./src/cli/utils
 HEADERS_PATHS             := ./src/cli
 HEADERS_PATHS             += ./src/cli/BF
 HEADERS_PATHS             += ./src/cli/platform
+HEADERS_PATHS             += ./src/cli/utils
 HEADERS_PATHS             += ./src/common
 PRECOMPILED_HEADERS_PATHS :=
 
