Add DoubleFuck folder to Makefile

--- a/Makefile-cli
+++ b/Makefile-cli
@@ -24,10 +24,12 @@ BUILD_PATH                := ./build
 BINARY_NAME               := bfi.exe
 SOURCES_PATHS             := ./src/cli
 SOURCES_PATHS             += ./src/cli/BF
+SOURCES_PATHS             += ./src/cli/DF
 SOURCES_PATHS             += ./src/cli/platform
 SOURCES_PATHS             += ./src/cli/utils
 HEADERS_PATHS             := ./src/cli
 HEADERS_PATHS             += ./src/cli/BF
+HEADERS_PATHS             += ./src/cli/DF
 HEADERS_PATHS             += ./src/cli/platform
 HEADERS_PATHS             += ./src/cli/utils
 HEADERS_PATHS             += ./src/common
